--- a/hackrain1.html
+++ b/hackrain1.html
@@ -18,7 +18,7 @@
     const height = document.getElementById("myCanvas").height = screen.availHeight;
     const ctx = document.getElementById("myCanvas").getContext("2d");
     const arr = Array(Math.ceil(width / 10)).fill(0);
-    const str = "余倩雯是猪".split("");
+    const str = "余倩雯是猪00000000000".split("");
 
 function rain() {
     ctx.fillStyle = "rgba(0,0,0,0.05)";
